stopped menus from overflowing vertically and horizontally

--- a/src/new/web/Orange-Music-2/css/menu.css
+++ b/src/new/web/Orange-Music-2/css/menu.css
@@ -17,7 +17,7 @@
 }
 
 .MENUmodalBody {
-    position: relative;
+    position: absolute;
     top: 0px;
     left: 0px;
     width: 12rem;
